<resources>
    <string name="app_name">Criminal Intent</string>
    <string name="crime_title_hint">Enter a name for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="date_picker_title">Date of the crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="crime_delete">Delete</string>
    <string name="crime_suspect">Choose Suspect</string>
    <string name="crime_report">Send Crime Report</string>
    <string name="crime_report_format">%1$s!
    The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The crime is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s</string>
    <string name="crime_report_subject">Criminal Intent Crime Report</string>
    <string name="crime_report_send">Send crime report via</string>
</resources>
